{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 8822,
  "lineage": "b4ee9b71-f31c-9a13-9ade-a5fe185a2945",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "armageddon_liberdade_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:sa-east-1:950876749850:transit-gateway/tgw-0bdce88949568936b",
            "association_default_route_table_id": "tgw-rtb-0d445c6ad35c38d6c",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "armageddon-liberdade-tgw01 (Sao Paulo spoke)",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-0bdce88949568936b",
            "multicast_support": "disable",
            "owner_id": "950876749850",
            "propagation_default_route_table_id": "tgw-rtb-0d445c6ad35c38d6c",
            "region": "sa-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "armageddon-liberdade-tgw01"
            },
            "tags_all": {
              "Name": "armageddon-liberdade-tgw01"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "armageddon_shinjuku_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:transit-gateway/tgw-0c2d689ab11a0a4f4",
            "association_default_route_table_id": "tgw-rtb-035d84c5791104e56",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "armageddon-shinjuku-tgw01 (Tokyo hub)",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-0c2d689ab11a0a4f4",
            "multicast_support": "disable",
            "owner_id": "950876749850",
            "propagation_default_route_table_id": "tgw-rtb-035d84c5791104e56",
            "region": "ap-northeast-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "armageddon-shinjuku-tgw01"
            },
            "tags_all": {
              "Name": "armageddon-shinjuku-tgw01"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "armageddon_shinjuku_to_liberdade_peer01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:transit-gateway-attachment/tgw-attach-02d34e7fdd01c440d",
            "id": "tgw-attach-02d34e7fdd01c440d",
            "peer_account_id": "950876749850",
            "peer_region": "sa-east-1",
            "peer_transit_gateway_id": "tgw-0bdce88949568936b",
            "region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "shinjuku-to-liberdade-peer01"
            },
            "tags_all": {
              "Name": "shinjuku-to-liberdade-peer01"
            },
            "transit_gateway_id": "tgw-0c2d689ab11a0a4f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "armageddon_liberdade_accept_peer01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-02d34e7fdd01c440d",
            "peer_account_id": "950876749850",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-0c2d689ab11a0a4f4",
            "region": "sa-east-1",
            "tags": {
              "Name": "armageddon-liberdade-accept-peer01"
            },
            "tags_all": {
              "Name": "armageddon-liberdade-accept-peer01"
            },
            "transit_gateway_attachment_id": "tgw-attach-02d34e7fdd01c440d",
            "transit_gateway_id": "tgw-0bdce88949568936b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.armageddon_shinjuku_to_liberdade_peer01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "liberdade_to_tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.30.0.0/16",
            "id": "tgw-rtb-0d445c6ad35c38d6c_10.30.0.0/16",
            "region": "sa-east-1",
            "transit_gateway_attachment_id": "tgw-attach-02d34e7fdd01c440d",
            "transit_gateway_route_table_id": "tgw-rtb-0d445c6ad35c38d6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.armageddon_shinjuku_to_liberdade_peer01",
            "aws_ec2_transit_gateway_peering_attachment_accepter.armageddon_liberdade_accept_peer01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "shinjuku_to_sao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.80.0.0/16",
            "id": "tgw-rtb-035d84c5791104e56_10.80.0.0/16",
            "region": "ap-northeast-1",
            "transit_gateway_attachment_id": "tgw-attach-02d34e7fdd01c440d",
            "transit_gateway_route_table_id": "tgw-rtb-035d84c5791104e56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.armageddon_shinjuku_to_liberdade_peer01",
            "aws_ec2_transit_gateway_peering_attachment_accepter.armageddon_liberdade_accept_peer01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "armageddon_liberdade_attach_sp_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:sa-east-1:950876749850:transit-gateway-attachment/tgw-attach-04b2fdf243dd3f163",
            "dns_support": "enable",
            "id": "tgw-attach-04b2fdf243dd3f163",
            "ipv6_support": "disable",
            "region": "sa-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-06d5c75c6accf200c",
              "subnet-07dbf568111e634f5"
            ],
            "tags": {
              "Name": "armageddon-liberdade-attach-sp-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-liberdade-attach-sp-vpc01"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0bdce88949568936b",
            "vpc_id": "vpc-09496ac03847d0650",
            "vpc_owner_id": "950876749850"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_subnet.sao_private",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "armageddon_shinjuku_attach_tokyo_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:transit-gateway-attachment/tgw-attach-0cf81aeab86f84487",
            "dns_support": "enable",
            "id": "tgw-attach-0cf81aeab86f84487",
            "ipv6_support": "disable",
            "region": "ap-northeast-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "shinjuku-attach-tokyo-vpc01"
            },
            "tags_all": {
              "Name": "shinjuku-attach-tokyo-vpc01"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0c2d689ab11a0a4f4",
            "vpc_id": "vpc-0749dcd9e4d0b62f2",
            "vpc_owner_id": "950876749850"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fdca181193477cf",
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:elastic-ip/eipalloc-08fdca181193477cf",
            "association_id": "eipassoc-03f1240f62972c1fd",
            "domain": "vpc",
            "id": "eipalloc-08fdca181193477cf",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0f6b64e5a317ba595",
            "private_dns": "ip-10-30-1-48.ap-northeast-1.compute.internal",
            "private_ip": "10.30.1.48",
            "public_dns": "ec2-13-158-184-107.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.158.184.107",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sao_main_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0339f1862e8417403",
            "arn": "arn:aws:ec2:sa-east-1:950876749850:elastic-ip/eipalloc-0339f1862e8417403",
            "association_id": "eipassoc-01b41eddb4987ff8a",
            "domain": "vpc",
            "id": "eipalloc-0339f1862e8417403",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-081babff829478dea",
            "private_dns": "ip-10-80-1-154.sa-east-1.compute.internal",
            "private_ip": "10.80.1.154",
            "public_dns": "ec2-18-230-238-198.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.238.198",
            "public_ipv4_pool": "amazon",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-nat-eip"
            },
            "tags_all": {
              "Name": "sao-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-070d2b24928913a49",
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:instance/i-01c7668ece060707c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam-profile",
            "id": "i-01c7668ece060707c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e39902742c7b4d68"
              }
            ],
            "primary_network_interface_id": "eni-0e39902742c7b4d68",
            "private_dns": "ip-10-30-1-92.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.92",
            "public_dns": "ec2-52-195-176-251.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.176.251",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f24659b4ae5dd0af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f07690dbd8ecb3e6",
            "tags": {
              "Name": "ec2-lab"
            },
            "tags_all": {
              "Name": "ec2-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e80c2eae8e0c2c67"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-01c7668ece060707c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_lab_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-070d2b24928913a49",
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:instance/i-076e3bccafef6a37e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam-profile",
            "id": "i-076e3bccafef6a37e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05d3e350c6e762d28"
              }
            ],
            "primary_network_interface_id": "eni-05d3e350c6e762d28",
            "private_dns": "ip-10-30-11-91.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.91",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0397a5070ba0ed47c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049f9a70a0cc913c3",
            "tags": {
              "Name": "ec2-private"
            },
            "tags_all": {
              "Name": "ec2-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4a71233c11678e0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-076e3bccafef6a37e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_private_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sao_ec2_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08dd439af9c3f1639",
            "arn": "arn:aws:ec2:sa-east-1:950876749850:instance/i-0d0e1f21b73d73338",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sao-iam-profile",
            "id": "i-0d0e1f21b73d73338",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0741a1bc5347e5a1d"
              }
            ],
            "primary_network_interface_id": "eni-0741a1bc5347e5a1d",
            "private_dns": "ip-10-80-1-89.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.80.1.89",
            "public_dns": "ec2-52-67-145-79.sa-east-1.compute.amazonaws.com",
            "public_ip": "52.67.145.79",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e14db046e11b91a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fea6611c110d68b",
            "tags": {
              "Name": "sao-ec2-lab"
            },
            "tags_all": {
              "Name": "sao-ec2-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0635c16a71aa83e36"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-0d0e1f21b73d73338",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.sao_iam_profile",
            "aws_iam_role.sao_ec2_role",
            "aws_security_group.sao_ec2_lab_sg",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_ssm_parameter.sao_ec2_al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sao_ec2_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08dd439af9c3f1639",
            "arn": "arn:aws:ec2:sa-east-1:950876749850:instance/i-0045921e332b135f6",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sao-iam-profile",
            "id": "i-0045921e332b135f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fe2905587afe38e8"
              }
            ],
            "primary_network_interface_id": "eni-0fe2905587afe38e8",
            "private_dns": "ip-10-80-11-240.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.80.11.240",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a72023ec728cb12a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dbf568111e634f5",
            "tags": {
              "Name": "sao-ec2-private"
            },
            "tags_all": {
              "Name": "sao-ec2-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0933a6eb306a72286"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-0045921e332b135f6",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.sao_iam_profile",
            "aws_iam_role.sao_ec2_role",
            "aws_security_group.sao_ec2pri_sg",
            "aws_subnet.sao_private",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_ssm_parameter.sao_al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:internet-gateway/igw-0791fe294545c6805",
            "id": "igw-0791fe294545c6805",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sao_main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:internet-gateway/igw-08370e79bda0a68a0",
            "id": "igw-08370e79bda0a68a0",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao_main-igw"
            },
            "tags_all": {
              "Name": "sao_main-igw"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "armageddon_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-alb-logs-950876749850",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1",
            "arn_suffix": "app/armageddon-alb/f4a0ef42f3edc1b1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-alb-1568355755.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-041e9ba1255546532"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d57d9bd2bd6141f"
              },
              {
                "subnet_id": "subnet-0f07690dbd8ecb3e6"
              }
            ],
            "subnets": [
              "subnet-05d57d9bd2bd6141f",
              "subnet-0f07690dbd8ecb3e6"
            ],
            "tags": {
              "Name": "armageddon-alb"
            },
            "tags_all": {
              "Name": "armageddon-alb"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1"
          },
          "dependencies": [
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sao_armageddon_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "sao-armageddon-alb-logs-950876749850",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:loadbalancer/app/sao-armageddon-alb/21fe6d104cd5e1cb",
            "arn_suffix": "app/sao-armageddon-alb/21fe6d104cd5e1cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sao-armageddon-alb-1989354355.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:loadbalancer/app/sao-armageddon-alb/21fe6d104cd5e1cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sao-armageddon-alb",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-057c0559388369e59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ac27edfcb694c34"
              },
              {
                "subnet_id": "subnet-08fea6611c110d68b"
              }
            ],
            "subnets": [
              "subnet-02ac27edfcb694c34",
              "subnet-08fea6611c110d68b"
            ],
            "tags": {
              "Name": "sao-armageddon-alb"
            },
            "tags_all": {
              "Name": "sao-armageddon-alb"
            },
            "vpc_id": "vpc-09496ac03847d0650",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:loadbalancer/app/sao-armageddon-alb/21fe6d104cd5e1cb"
          },
          "dependencies": [
            "aws_s3_bucket.sao_armageddon_alb_logs_bucket",
            "aws_security_group.sao_alb_sg",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_caller_identity.sao_armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/baec43a94e70e4b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/baec43a94e70e4b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/baec43a94e70e4b9"
          },
          "dependencies": [
            "aws_lb.armageddon_alb",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:950876749850:certificate/fd289523-7004-48cf-98a7-5dfcf7331d2e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sao_armageddon_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:listener/app/sao-armageddon-alb/21fe6d104cd5e1cb/ef009c0723373e54",
            "certificate_arn": "arn:aws:acm:sa-east-1:950876749850:certificate/cb955275-bf3a-44db-8f13-c856590673d5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:targetgroup/sao-armageddon-tg/ed222875e038196c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:listener/app/sao-armageddon-alb/21fe6d104cd5e1cb/ef009c0723373e54",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:loadbalancer/app/sao-armageddon-alb/21fe6d104cd5e1cb",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:listener/app/sao-armageddon-alb/21fe6d104cd5e1cb/ef009c0723373e54"
          },
          "dependencies": [
            "aws_acm_certificate.sao_armageddon_acm_cert01",
            "aws_acm_certificate_validation.sao_armageddon_acm_validation01",
            "aws_lb.sao_armageddon_alb",
            "aws_lb_target_group.sao_armageddon_tg",
            "aws_route53_record.sao_armageddon_record",
            "aws_s3_bucket.sao_armageddon_alb_logs_bucket",
            "aws_security_group.sao_alb_sg",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_acm_certificate.sao_existing",
            "data.aws_availability_zones.sao_available",
            "data.aws_caller_identity.sao_armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageddon_default_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/74ef622903500824",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/74ef622903500824",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e",
            "priority": 99,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/74ef622903500824"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_listener.armageddon_https_listener",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageddon_require_origin_header",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/894cf23c87b849ad",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "King-Iron-Fist",
                    "regex_values": [],
                    "values": [
                      "jzWgzeCMSDJv1z1iF9huDT3zorXwcReE"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/894cf23c87b849ad",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e",
            "priority": 10,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:listener-rule/app/armageddon-alb/f4a0ef42f3edc1b1/cbaff9081d11e37e/894cf23c87b849ad"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01",
            "aws_lb.armageddon_alb",
            "aws_lb_listener.armageddon_https_listener",
            "aws_lb_target_group.armageddon_tg",
            "aws_route53_record.armageddon_record",
            "aws_route53_zone.armageddon_zone01",
            "aws_s3_bucket.armageddon_alb_logs_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_acm_certificate.existing",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.armageddon_self",
            "random_password.armageddon_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "armageddon_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b",
            "arn_suffix": "targetgroup/armageddon-tg/c13519cb0900814b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:loadbalancer/app/armageddon-alb/f4a0ef42f3edc1b1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-tg"
            },
            "tags_all": {
              "Name": "armageddon-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sao_armageddon_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:targetgroup/sao-armageddon-tg/ed222875e038196c",
            "arn_suffix": "targetgroup/sao-armageddon-tg/ed222875e038196c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:targetgroup/sao-armageddon-tg/ed222875e038196c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:sa-east-1:950876749850:loadbalancer/app/sao-armageddon-alb/21fe6d104cd5e1cb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sao-armageddon-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sao-armageddon-tg"
            },
            "tags_all": {
              "Name": "sao-armageddon-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:950876749850:targetgroup/sao-armageddon-tg/ed222875e038196c"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "armageddon_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b-20260209190012587100000003",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:950876749850:targetgroup/armageddon-tg/c13519cb0900814b",
            "target_id": "i-076e3bccafef6a37e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.ec2_private_b",
            "aws_lb_target_group.armageddon_tg",
            "aws_security_group.ec2_private_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fdca181193477cf",
            "association_id": "eipassoc-03f1240f62972c1fd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f30b2058775efa3f",
            "network_interface_id": "eni-0f6b64e5a317ba595",
            "private_ip": "10.30.1.48",
            "public_ip": "13.158.184.107",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f07690dbd8ecb3e6",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sao_main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0339f1862e8417403",
            "association_id": "eipassoc-01b41eddb4987ff8a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f78f9655f6056a0c",
            "network_interface_id": "eni-081babff829478dea",
            "private_ip": "10.80.1.154",
            "public_ip": "18.230.238.198",
            "region": "sa-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fea6611c110d68b",
            "tags": {
              "Name": "sao-main-nat"
            },
            "tags_all": {
              "Name": "sao-main-nat"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_liberdade_to_tokyo_route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f2a3c9c6bfdad59805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-02f2a3c9c6bfdad59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0bdce88949568936b",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-02f2a3c9c6bfdad59"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_liberdade_tgw01",
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_route_table.sao_private_route",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_shinjuku_to_sp_route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04210d35e3a513e4f2992065170",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04210d35e3a513e4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0c2d689ab11a0a4f4",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04210d35e3a513e4f"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01",
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_ec2lab_to_sao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-042e90d2f8095db2e2992065170",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-042e90d2f8095db2e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0c2d689ab11a0a4f4",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-042e90d2f8095db2e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.armageddon_shinjuku_tgw01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:route-table/rtb-04210d35e3a513e4f",
            "id": "rtb-04210d35e3a513e4f",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f30b2058775efa3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-04210d35e3a513e4f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:route-table/rtb-042e90d2f8095db2e",
            "id": "rtb-042e90d2f8095db2e",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0791fe294545c6805",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-042e90d2f8095db2e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sao_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:route-table/rtb-02f2a3c9c6bfdad59",
            "id": "rtb-02f2a3c9c6bfdad59",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f78f9655f6056a0c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sao-private-route"
            },
            "tags_all": {
              "Name": "sao-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-02f2a3c9c6bfdad59",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sao_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:route-table/rtb-01770c5d687d88d0d",
            "id": "rtb-01770c5d687d88d0d",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08370e79bda0a68a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sao-public-route"
            },
            "tags_all": {
              "Name": "sao-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-01770c5d687d88d0d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.sao_main_igw",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0623ec5541df7b30b",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04210d35e3a513e4f",
            "subnet_id": "subnet-049f9a70a0cc913c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d32db99026a4d8f",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04210d35e3a513e4f",
            "subnet_id": "subnet-00f33d24cc6f4c692"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5f341a21dcad560",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-04210d35e3a513e4f",
            "subnet_id": "subnet-0cb9f5c1c3f49e1df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0736c4e7c01bd7977",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-042e90d2f8095db2e",
            "subnet_id": "subnet-0f07690dbd8ecb3e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0949e91dec215e926",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-042e90d2f8095db2e",
            "subnet_id": "subnet-05d57d9bd2bd6141f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d51b96301564cfd5",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-042e90d2f8095db2e",
            "subnet_id": "subnet-0e235c0fe1d92c38b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711308daa18db189",
            "region": "sa-east-1",
            "route_table_id": "rtb-02f2a3c9c6bfdad59",
            "subnet_id": "subnet-07dbf568111e634f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_route_table.sao_private_route",
            "aws_subnet.sao_private",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03828d6b9fae570d9",
            "region": "sa-east-1",
            "route_table_id": "rtb-02f2a3c9c6bfdad59",
            "subnet_id": "subnet-06d5c75c6accf200c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_route_table.sao_private_route",
            "aws_subnet.sao_private",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eac590aa2f89877",
            "region": "sa-east-1",
            "route_table_id": "rtb-02f2a3c9c6bfdad59",
            "subnet_id": "subnet-0873ecf862bb2eb5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_route_table.sao_private_route",
            "aws_subnet.sao_private",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084fb1fef72e0abe7",
            "region": "sa-east-1",
            "route_table_id": "rtb-01770c5d687d88d0d",
            "subnet_id": "subnet-08fea6611c110d68b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sao_main_igw",
            "aws_route_table.sao_public_route",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d3ca3c679e372b",
            "region": "sa-east-1",
            "route_table_id": "rtb-01770c5d687d88d0d",
            "subnet_id": "subnet-02ac27edfcb694c34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sao_main_igw",
            "aws_route_table.sao_public_route",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095c46063c6fbb55c",
            "region": "sa-east-1",
            "route_table_id": "rtb-01770c5d687d88d0d",
            "subnet_id": "subnet-0a5fce957bdc13efe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sao_main_igw",
            "aws_route_table.sao_public_route",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group/sg-041e9ba1255546532",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4a71233c11678e0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-041e9ba1255546532",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-58a04531"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-041e9ba1255546532",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group/sg-0e80c2eae8e0c2c67",
            "description": "sg for http browser \u0026 ssh into",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e80c2eae8e0c2c67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.159.210.72/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-lab-sg"
            },
            "tags_all": {
              "Name": "ec2-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0e80c2eae8e0c2c67",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group/sg-0f4a71233c11678e0",
            "description": "Private app instance SG (HTTP only from ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4a71233c11678e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.80.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041e9ba1255546532"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-private-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-private-sg"
            },
            "tags_all": {
              "Name": "ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0f4a71233c11678e0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group/sg-0b9fb6a9e4b7d48e9",
            "description": "sg for rds private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9fb6a9e4b7d48e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.80.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e80c2eae8e0c2c67",
                  "sg-0f4a71233c11678e0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-lab-sg"
            },
            "tags_all": {
              "Name": "rds-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0b9fb6a9e4b7d48e9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sao_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group/sg-057c0559388369e59",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0933a6eb306a72286"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-057c0559388369e59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-alb-sg"
            },
            "tags_all": {
              "Name": "sao-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-057c0559388369e59",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sao_ec2_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group/sg-0635c16a71aa83e36",
            "description": "sg for http browser \u0026 ssh into",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0635c16a71aa83e36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.159.210.72/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sao-ec2-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-ec2-lab-sg"
            },
            "tags_all": {
              "Name": "sao-ec2-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0635c16a71aa83e36",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sao_ec2pri_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group/sg-0933a6eb306a72286",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0933a6eb306a72286",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057c0559388369e59"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sao-ec2pri-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-ec2pri-sg"
            },
            "tags_all": {
              "Name": "sao-ec2pri-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0933a6eb306a72286",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sao_vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group/sg-0e04c172c4d29d86b",
            "description": "Allow 443 to VPC interface endpoints only from private EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e04c172c4d29d86b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0933a6eb306a72286"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sao-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "sao-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0e04c172c4d29d86b",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group/sg-0ca3138feb614a8a1",
            "description": "Interface endpoints SG (443 only from private EC2)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca3138feb614a8a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e80c2eae8e0c2c67"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4a71233c11678e0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0ca3138feb614a8a1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sao_alb_ingress_https_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1456966811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-057c0559388369e59",
            "security_group_rule_id": "sgr-092cb3cc25d34f21b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sao_alb_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sao_alb_to_ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2564658531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-057c0559388369e59",
            "security_group_rule_id": "sgr-0cc81470a977ecd48",
            "self": false,
            "source_security_group_id": "sg-0933a6eb306a72286",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sao_alb_sg",
            "aws_security_group.sao_ec2pri_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sao_ec2_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3661902219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "sa-east-1",
            "security_group_id": "sg-0933a6eb306a72286",
            "security_group_rule_id": "sgr-081165a4c23acbeb1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sao_ec2pri_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sao_ec2_ingress_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3210623684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "sa-east-1",
            "security_group_id": "sg-0933a6eb306a72286",
            "security_group_rule_id": "sgr-0791578413b777a91",
            "self": false,
            "source_security_group_id": "sg-057c0559388369e59",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sao_alb_sg",
            "aws_security_group.sao_ec2pri_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-049f9a70a0cc913c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049f9a70a0cc913c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-049f9a70a0cc913c3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-00f33d24cc6f4c692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f33d24cc6f4c692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-00f33d24cc6f4c692",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-0cb9f5c1c3f49e1df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.30.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb9f5c1c3f49e1df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0cb9f5c1c3f49e1df",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-0f07690dbd8ecb3e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f07690dbd8ecb3e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0f07690dbd8ecb3e6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-05d57d9bd2bd6141f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d57d9bd2bd6141f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-05d57d9bd2bd6141f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:subnet/subnet-0e235c0fe1d92c38b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e235c0fe1d92c38b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-c"
            },
            "tags_all": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0e235c0fe1d92c38b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-07dbf568111e634f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.80.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dbf568111e634f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-private-1"
            },
            "tags_all": {
              "Name": "sao-private-1"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-07dbf568111e634f5",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-06d5c75c6accf200c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.80.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d5c75c6accf200c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-private-2"
            },
            "tags_all": {
              "Name": "sao-private-2"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-06d5c75c6accf200c",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-0873ecf862bb2eb5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.80.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0873ecf862bb2eb5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-private-3"
            },
            "tags_all": {
              "Name": "sao-private-3"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0873ecf862bb2eb5b",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-08fea6611c110d68b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.80.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fea6611c110d68b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-public-1"
            },
            "tags_all": {
              "Name": "sao-public-1"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-08fea6611c110d68b",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-02ac27edfcb694c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.80.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac27edfcb694c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-public-2"
            },
            "tags_all": {
              "Name": "sao-public-2"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-02ac27edfcb694c34",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:subnet/subnet-0a5fce957bdc13efe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.80.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5fce957bdc13efe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-public-3"
            },
            "tags_all": {
              "Name": "sao-public-3"
            },
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0a5fce957bdc13efe",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc/vpc-0749dcd9e4d0b62f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0456869215c2509c8",
            "default_route_table_id": "rtb-07078e019d71e026f",
            "default_security_group_id": "sg-03c329f3d96a2073f",
            "dhcp_options_id": "dopt-06adab3cbf072301f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0749dcd9e4d0b62f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07078e019d71e026f",
            "owner_id": "950876749850",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpc-0749dcd9e4d0b62f2",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sao_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:vpc/vpc-09496ac03847d0650",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.80.0.0/16",
            "default_network_acl_id": "acl-088f3bf9bf8e39964",
            "default_route_table_id": "rtb-0ebcf8d57fbf428f2",
            "default_security_group_id": "sg-010631e3b23ec7a4a",
            "dhcp_options_id": "dopt-0d6c46154e4ddc8fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09496ac03847d0650",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ebcf8d57fbf428f2",
            "owner_id": "950876749850",
            "region": "sa-east-1",
            "tags": {
              "Name": "sao-main-vpc"
            },
            "tags_all": {
              "Name": "sao-main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpc-09496ac03847d0650",
            "region": "sa-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-0aeb390412efeb007",
            "dns_entry": [
              {
                "dns_name": "vpce-0aeb390412efeb007-9zjmx98j.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0aeb390412efeb007-9zjmx98j-ap-northeast-1d.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0aeb390412efeb007-9zjmx98j-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0aeb390412efeb007-9zjmx98j-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04806583A890T91MIUJJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aeb390412efeb007",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03dd1dacae95fec77",
              "eni-089d830b38928579d",
              "eni-0ff86ff6fdd853caf"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.201",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.186",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.204",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "ec2pri-ec2messages"
            },
            "tags_all": {
              "Name": "ec2pri-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0aeb390412efeb007",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-0ec605122d849cb54",
            "dns_entry": [
              {
                "dns_name": "vpce-0ec605122d849cb54-z82uakys.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ec605122d849cb54-z82uakys-ap-northeast-1d.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ec605122d849cb54-z82uakys-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ec605122d849cb54-z82uakys-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z04809613QOWHUKEEAE4G"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z06571851227KI2ZSPEI7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ec605122d849cb54",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-085a3b29c91cb6594",
              "eni-0925c6f76dd50028e",
              "eni-09e054d35a79867b9"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.129",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.114",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.171",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "ec2pri-kms"
            },
            "tags_all": {
              "Name": "ec2pri-kms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0ec605122d849cb54",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-0f9aa8f5c57b03551",
            "dns_entry": [
              {
                "dns_name": "vpce-0f9aa8f5c57b03551-i7bzj940.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f9aa8f5c57b03551-i7bzj940-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f9aa8f5c57b03551-i7bzj940-ap-northeast-1d.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f9aa8f5c57b03551-i7bzj940-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z066180018WYM4R2SQQEI"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0686129SMD5478UI7X3"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z068608437OMHE7G23IHU"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0656931HHZ2AVGIPHR6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f9aa8f5c57b03551",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05c2ff4da6b30b901",
              "eni-0728d759fca05bd39",
              "eni-0cf2afd781cdff69b"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.78",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.83",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.70",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "ec2pri-logs"
            },
            "tags_all": {
              "Name": "ec2pri-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0f9aa8f5c57b03551",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_s3_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-084d727ebe5d6fa5f",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-084d727ebe5d6fa5f",
            "ip_address_type": "ipv4",
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04210d35e3a513e4f"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "ec2pri-s3-gw"
            },
            "tags_all": {
              "Name": "ec2pri-s3-gw"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-084d727ebe5d6fa5f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_secrets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-0a7ea6b340d424935",
            "dns_entry": [
              {
                "dns_name": "vpce-0a7ea6b340d424935-01cotqmr.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a7ea6b340d424935-01cotqmr-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a7ea6b340d424935-01cotqmr-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0a7ea6b340d424935-01cotqmr-ap-northeast-1d.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z06558142QG5V7J6ON0L6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a7ea6b340d424935",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-018e3dcf5f92b02e9",
              "eni-053a9a82eba217878",
              "eni-06fcaade0e23a60cc"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.229",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.211",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.58",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "ec2pri-secrets"
            },
            "tags_all": {
              "Name": "ec2pri-secrets"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0a7ea6b340d424935",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-015d4aa21a68fb0da",
            "dns_entry": [
              {
                "dns_name": "vpce-015d4aa21a68fb0da-ecr9edcu.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-015d4aa21a68fb0da-ecr9edcu-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-015d4aa21a68fb0da-ecr9edcu-ap-northeast-1d.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-015d4aa21a68fb0da-ecr9edcu-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0680570A44EEJUZ9359"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0686980KBR0VASN7GPN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-015d4aa21a68fb0da",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02ce827397ae8871b",
              "eni-03f7b4a535c0cb5e2",
              "eni-0e4321ebe40ca372e"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.176",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.25",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.246",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "ec2pri-ssm"
            },
            "tags_all": {
              "Name": "ec2pri-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-015d4aa21a68fb0da",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2pri_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:vpc-endpoint/vpce-0d7cddd9f1cf5907c",
            "dns_entry": [
              {
                "dns_name": "vpce-0d7cddd9f1cf5907c-fceb0obc.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d7cddd9f1cf5907c-fceb0obc-ap-northeast-1d.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d7cddd9f1cf5907c-fceb0obc-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0d7cddd9f1cf5907c-fceb0obc-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z06870323Q96PH9FS37J6"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z04825452KCZXTVISERSP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d7cddd9f1cf5907c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03a29cb540720c9c7",
              "eni-0acf475b8da1829df",
              "eni-0de0862d9a199ff3c"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ca3138feb614a8a1"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.128",
                "subnet_id": "subnet-049f9a70a0cc913c3"
              },
              {
                "ipv4": "10.30.12.58",
                "subnet_id": "subnet-00f33d24cc6f4c692"
              },
              {
                "ipv4": "10.30.13.104",
                "subnet_id": "subnet-0cb9f5c1c3f49e1df"
              }
            ],
            "subnet_ids": [
              "subnet-00f33d24cc6f4c692",
              "subnet-049f9a70a0cc913c3",
              "subnet-0cb9f5c1c3f49e1df"
            ],
            "tags": {
              "Name": "vpcend-ssmmessages"
            },
            "tags_all": {
              "Name": "vpcend-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0749dcd9e4d0b62f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0d7cddd9f1cf5907c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_region.current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sao_ec2pri_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:vpc-endpoint/vpce-0bac5071c922283fc",
            "dns_entry": [
              {
                "dns_name": "vpce-0bac5071c922283fc-ed3gwz7a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0bac5071c922283fc-ed3gwz7a-sa-east-1a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0bac5071c922283fc-ed3gwz7a-sa-east-1c.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0bac5071c922283fc-ed3gwz7a-sa-east-1b.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2messages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z09009341HFUAYGEWZ4OF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bac5071c922283fc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-050332fa81a887f48",
              "eni-0849e23d6788f90f7",
              "eni-0fde80a0a63b6d6f9"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e04c172c4d29d86b"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2messages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.80.11.27",
                "subnet_id": "subnet-07dbf568111e634f5"
              },
              {
                "ipv4": "10.80.12.34",
                "subnet_id": "subnet-06d5c75c6accf200c"
              },
              {
                "ipv4": "10.80.13.65",
                "subnet_id": "subnet-0873ecf862bb2eb5b"
              }
            ],
            "subnet_ids": [
              "subnet-06d5c75c6accf200c",
              "subnet-07dbf568111e634f5",
              "subnet-0873ecf862bb2eb5b"
            ],
            "tags": {
              "Name": "sao-vpce-ec2messages"
            },
            "tags_all": {
              "Name": "sao-vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0bac5071c922283fc",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_vpc_endpoints_sg",
            "aws_subnet.sao_private",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_region.sao_current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sao_ec2pri_s3_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:vpc-endpoint/vpce-0f43eaac0f586d80f",
            "cidr_blocks": [
              "16.12.2.0/24",
              "3.5.232.0/22",
              "16.12.0.0/23",
              "52.95.163.0/24",
              "52.95.164.0/23"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f43eaac0f586d80f",
            "ip_address_type": "ipv4",
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6aa54003",
            "private_dns_enabled": false,
            "region": "sa-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02f2a3c9c6bfdad59"
            ],
            "service_name": "com.amazonaws.sa-east-1.s3",
            "service_region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "sao-ec2pri-s3-gw"
            },
            "tags_all": {
              "Name": "sao-ec2pri-s3-gw"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0f43eaac0f586d80f",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_eip.sao_main_nat_eip",
            "aws_internet_gateway.sao_main_igw",
            "aws_nat_gateway.sao_main_nat",
            "aws_route_table.sao_private_route",
            "aws_subnet.sao_public",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_region.sao_current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sao_ec2pri_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:vpc-endpoint/vpce-0c447196011533870",
            "dns_entry": [
              {
                "dns_name": "vpce-0c447196011533870-9rib8eu5.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c447196011533870-9rib8eu5-sa-east-1a.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c447196011533870-9rib8eu5-sa-east-1b.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0c447196011533870-9rib8eu5-sa-east-1c.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssm.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0900955YY5XQBWTZ83S"
              },
              {
                "dns_name": "ssm-facade.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z06573391X31F9S74CLRB"
              },
              {
                "dns_name": "ssm.sa-east-1.api.aws",
                "hosted_zone_id": "Z068213425XRU8TMOOTRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c447196011533870",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0103896fade03fa84",
              "eni-016729ccfc6f13f33",
              "eni-0df76d1018325222e"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e04c172c4d29d86b"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssm",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.80.11.94",
                "subnet_id": "subnet-07dbf568111e634f5"
              },
              {
                "ipv4": "10.80.12.68",
                "subnet_id": "subnet-06d5c75c6accf200c"
              },
              {
                "ipv4": "10.80.13.79",
                "subnet_id": "subnet-0873ecf862bb2eb5b"
              }
            ],
            "subnet_ids": [
              "subnet-06d5c75c6accf200c",
              "subnet-07dbf568111e634f5",
              "subnet-0873ecf862bb2eb5b"
            ],
            "tags": {
              "Name": "sao-vpce-ssm"
            },
            "tags_all": {
              "Name": "sao-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-0c447196011533870",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_vpc_endpoints_sg",
            "aws_subnet.sao_private",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_region.sao_current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sao_ec2pri_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:vpc-endpoint/vpce-00af5d2f6f9c68778",
            "dns_entry": [
              {
                "dns_name": "vpce-00af5d2f6f9c68778-bknchkxq.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00af5d2f6f9c68778-bknchkxq-sa-east-1a.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00af5d2f6f9c68778-bknchkxq-sa-east-1c.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-00af5d2f6f9c68778-bknchkxq-sa-east-1b.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z06628391EIBKPKPLQBDG"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.api.aws",
                "hosted_zone_id": "Z06560612WWBW8CRFM29Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00af5d2f6f9c68778",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0419d2f7976f4ad91",
              "eni-04790b74f6dcede19",
              "eni-050df23d23dbdbd93"
            ],
            "owner_id": "950876749850",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "sa-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e04c172c4d29d86b"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssmmessages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.80.11.184",
                "subnet_id": "subnet-07dbf568111e634f5"
              },
              {
                "ipv4": "10.80.12.232",
                "subnet_id": "subnet-06d5c75c6accf200c"
              },
              {
                "ipv4": "10.80.13.29",
                "subnet_id": "subnet-0873ecf862bb2eb5b"
              }
            ],
            "subnet_ids": [
              "subnet-06d5c75c6accf200c",
              "subnet-07dbf568111e634f5",
              "subnet-0873ecf862bb2eb5b"
            ],
            "tags": {
              "Name": "sao-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "sao-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09496ac03847d0650"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpce-00af5d2f6f9c68778",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_vpc_endpoints_sg",
            "aws_subnet.sao_private",
            "aws_vpc.sao_main_vpc",
            "data.aws_availability_zones.sao_available",
            "data.aws_region.sao_current_region"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_ec2_private_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0dcd8c7a8e1291f9b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0dcd8c7a8e1291f9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f4a71233c11678e0",
            "region": "ap-northeast-1",
            "security_group_id": "sg-041e9ba1255546532",
            "security_group_rule_id": "sgr-0dcd8c7a8e1291f9b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0dcd8c7a8e1291f9b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_private_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_lab_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-07ca60c4c9e8e5be0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07ca60c4c9e8e5be0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0e80c2eae8e0c2c67",
            "security_group_rule_id": "sgr-07ca60c4c9e8e5be0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-07ca60c4c9e8e5be0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_private_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-014a997a8d01f3499",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-014a997a8d01f3499",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f4a71233c11678e0",
            "security_group_rule_id": "sgr-014a997a8d01f3499",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-014a997a8d01f3499",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_private_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_mysql_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0f780c88f574eb880",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f780c88f574eb880",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b9fb6a9e4b7d48e9",
            "security_group_rule_id": "sgr-0f780c88f574eb880",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0f780c88f574eb880",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sao_ec2_lab_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group-rule/sgr-099b62259e639a048",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-099b62259e639a048",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0635c16a71aa83e36",
            "security_group_rule_id": "sgr-099b62259e639a048",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-099b62259e639a048",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_ec2_lab_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sao_vpc_endpoints_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group-rule/sgr-0548ebf63492f4c73",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0548ebf63492f4c73",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0e04c172c4d29d86b",
            "security_group_rule_id": "sgr-0548ebf63492f4c73",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0548ebf63492f4c73",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_vpc_endpoints_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpc_endpoints_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-01b20947d430e786e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01b20947d430e786e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ca3138feb614a8a1",
            "security_group_rule_id": "sgr-01b20947d430e786e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-01b20947d430e786e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_ingress_443_from_cf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0743bf42e5a1b398b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0743bf42e5a1b398b",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-58a04531",
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-041e9ba1255546532",
            "security_group_rule_id": "sgr-0743bf42e5a1b398b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0743bf42e5a1b398b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc",
            "data.aws_ec2_managed_prefix_list.armageddon_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-076d4ea2cd3b017e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-076d4ea2cd3b017e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0e80c2eae8e0c2c67",
            "security_group_rule_id": "sgr-076d4ea2cd3b017e9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-076d4ea2cd3b017e9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0d432707e652df73b",
            "cidr_ipv4": "192.159.210.72/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d432707e652df73b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0e80c2eae8e0c2c67",
            "security_group_rule_id": "sgr-0d432707e652df73b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0d432707e652df73b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_private_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0126e8d4018cd1ecf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0126e8d4018cd1ecf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-041e9ba1255546532",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f4a71233c11678e0",
            "security_group_rule_id": "sgr-0126e8d4018cd1ecf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0126e8d4018cd1ecf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_private_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_lab_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0411630d31229fe08",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0411630d31229fe08",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e80c2eae8e0c2c67",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b9fb6a9e4b7d48e9",
            "security_group_rule_id": "sgr-0411630d31229fe08",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0411630d31229fe08",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_lab_mysql_from_ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0a408055c29ec189a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0a408055c29ec189a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f4a71233c11678e0",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b9fb6a9e4b7d48e9",
            "security_group_rule_id": "sgr-0a408055c29ec189a",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0a408055c29ec189a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_private_sg",
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_lab_mysql_from_sao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0419bd386ddb41fc3",
            "cidr_ipv4": "10.80.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0419bd386ddb41fc3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0b9fb6a9e4b7d48e9",
            "security_group_rule_id": "sgr-0419bd386ddb41fc3",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0419bd386ddb41fc3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sao_ec2_lab_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group-rule/sgr-0c1bad7d9f3da99d4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c1bad7d9f3da99d4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0635c16a71aa83e36",
            "security_group_rule_id": "sgr-0c1bad7d9f3da99d4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0c1bad7d9f3da99d4",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_ec2_lab_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sao_ec2_lab_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group-rule/sgr-0bb2a971876ec3c3d",
            "cidr_ipv4": "192.159.210.72/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bb2a971876ec3c3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "sa-east-1",
            "security_group_id": "sg-0635c16a71aa83e36",
            "security_group_rule_id": "sgr-0bb2a971876ec3c3d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0bb2a971876ec3c3d",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_ec2_lab_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sao_vpc_endpoints_in_443_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].saopaulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:950876749850:security-group-rule/sgr-08f4e5c453e62240a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08f4e5c453e62240a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0933a6eb306a72286",
            "region": "sa-east-1",
            "security_group_id": "sg-0e04c172c4d29d86b",
            "security_group_rule_id": "sgr-08f4e5c453e62240a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-08f4e5c453e62240a",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.sao_ec2pri_sg",
            "aws_security_group.sao_vpc_endpoints_sg",
            "aws_vpc.sao_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tokyo_ec2_private_from_sao_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-034f5435373eace42",
            "cidr_ipv4": "10.80.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-034f5435373eace42",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0f4a71233c11678e0",
            "security_group_rule_id": "sgr-034f5435373eace42",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-034f5435373eace42",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_private_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_endpoints_from_ec2_lab_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-04d0cae7e6d11c78d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04d0cae7e6d11c78d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e80c2eae8e0c2c67",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ca3138feb614a8a1",
            "security_group_rule_id": "sgr-04d0cae7e6d11c78d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-04d0cae7e6d11c78d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_security_group.vpc_endpoints_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_endpoints_from_ec2_private_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:950876749850:security-group-rule/sgr-0a73fd392cf7c23e3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a73fd392cf7c23e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f4a71233c11678e0",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0ca3138feb614a8a1",
            "security_group_rule_id": "sgr-0a73fd392cf7c23e3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0a73fd392cf7c23e3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2_private_sg",
            "aws_security_group.vpc_endpoints_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}